--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@ li {
 	  <a ng-href="" ng-click="" ng-class="" tabindex="0" > {{item.name}} - Price : {{ item.price | currency:"Rs "}}
 	  </a>
 	  
-	  <img src = images/{{item.src}}>
+	  <!--<img src = images/{{item.src}}>-->
+	  <img src = "https://cloud.githubusercontent.com/assets/14966129/10281211/7ec2267e-6b90-11e5-8b74-d4b52223df49.jpg">
+	  
+	  
 	  
 	  <input type="checkbox" ng-model="item.checked">
 	  
