--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ li {
                 <div id="content" class="col-sm-9">      
             
       <hr>
-      
+      <h2>Routing View</h2>
 	  <div ng-view></div>
 	  
 	  
