--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ li {
 
 <div class="col-sm-3">
 	<div id="cart" class="btn-group btn-block">
-		<button type="button" class="btn btn-inverse btn-block btn-lg"><i class=""></i> <span id="cart-total">{{cart.getCartItemsCount()}} item(s) </span></button>
+		<button type="button" class="btn btn-info active btn-block btn-lg"><i class=""></i> <span id="cart-total">{{cart.getCartItemsCount()}} item(s) </span></button>
 	</div>
 </div>
 	</div>
