--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@ li {
 
 <div class="col-sm-3">
 	<div id="cart" class="btn-group btn-block">
-		<button type="button" class="btn btn-info active btn-block btn-lg"><i class=""></i> <span id="cart-total">{{cart.getCartItemsCount()}} item(s) </span></button>
+		<button type="button" class="btn btn-info active btn-block btn-lg"><i class=""></i>
+		<img src="https://cloud.githubusercontent.com/assets/14966129/10300822/39463cb4-6c19-11e5-96a6-9796fb26c393.png" 
+		style="height: 25px">
+		<span id="cart-total">{{cart.getCartItemsCount()}} item(s) </span></button>
 	</div>
 </div>
 	</div>
